# energy310_notebooks

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  verify_installation.py
data/: config.pypsa_intro.yaml
data/examples/: sample_generators.csv  sample_network.csv
docs/: installation.md  troubleshooting.md
notebooks/: 01_introduction_to_PyPSA.ipynb  01_what_is_pypsa.ipynb  02_economic_dispatch_with_PyPSA_USA.ipynb  03_capacity_expansion_in_PyPSA.ipynb  03_snakemake_pipelines.ipynb  04_capacity_expansion_pypsa_usa_example.ipynb  05_configuring_pypsa_usa.ipynb  09_reserve_constraints_example.ipynb  helpers.py
tutorials/: 02_git_and_opensource.md
workflows/: Snakefile  config.yaml
workflows/scripts/: download_data.py
